--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/auth": "^21.4.0",
+    "@react-native-firebase/firestore": "^21.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.39",
+    "expo-firebase-auth": "^2.0.0",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
