--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
+    "haversine": "^1.1.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-maps": "1.14.0",
