--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/auth": "^21.4.0",
     "@react-native-firebase/firestore": "^21.4.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.39",
@@ -26,7 +27,7 @@
     "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
