--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/auth": "^21.4.0",
     "@react-native-firebase/firestore": "^21.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.39",
+    "expo": "^52.0.23",
     "expo-firebase-auth": "^2.0.0",
-    "expo-location": "~17.0.1",
-    "expo-status-bar": "~1.12.1",
+    "expo-location": "~18.0.4",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
     "haversine": "^1.1.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-maps": "1.14.0",
+    "react": "^18.3.1",
+    "react-native": "^0.76.5",
+    "react-native-maps": "^1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^4.0.0"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
